redefined the centralWidget to accomodate the GameInfo box

--- a/ChessGP/ChessGP.vcxproj
+++ b/ChessGP/ChessGP.vcxproj
@@ -86,6 +86,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameInfo.cpp" />
     <ClCompile Include="NewGamePromptDialog.cpp" />
     <QtRcc Include="mainwindow.qrc" />
     <QtUic Include="mainwindow.ui" />
@@ -107,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="NewGamePromptDialog.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="GameInfo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
