--- a/ChessGP/ChessGP.vcxproj.filters
+++ b/ChessGP/ChessGP.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="NewGamePromptDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameInfo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ChessBoard.h">
@@ -71,6 +74,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="NewGamePromptDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="GameInfo.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
